...
    <!--Account Kit-->

    <string name="FACEBOOK_APP_ID">165708047598044</string>
    <string name="ak_login_protocol_scheme">ak165708047598044</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">19cbea5f56f6e79143670c57d334e290</string>

    <string name="user_picture">User picture</string>
    <string name="nome">nome</string>
    <string name="_2">2</string>
    <string name="r">R</string>
    <string name="vitorias_x">Vitorias: X</string>
    <string name="derrotas_x">Derrotas: X</string>
    <string name="check">✓</string>
    <string name="enviados">Enviados</string>
    <string name="recebidos">Recebidos</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_desafio">Enviar Desafio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n">N</string>
    <string name="userpicture">UserPicture</string>
    <string name="tenistas">Tenistas</string>
...
    <string name="rankingMenu">Ranking</string>

    <!-- Navigation Bottom -->
    <string name="feedNavigation">FEED</string>
    <string name="rankingNavigation">RANKING</string>
    <string name="profileNavigation">PERFIL</string>
    <string name="challengeNavigation">DESAFIO</string>

    <!-- Challenge Scene -->
    <string name="challengeBestOf">Melhor De</string>
    <string name="challengeDefaultChallenger">Challenger</string>
    <string name="challengeDefaultChallenged">Challenged</string>
    <string name="challengeImageChallengerDescription">Foto do desafiante</string>
...
    <string name="e_mail_ou_telefone">E-mail ou telefone</string>
    <string name="solicita_o_de_registro">Solicitação de registro</string>
    <string name="x_uob">X</string>
    <string name="pref_previously_started">isFirstRun</string>

    <!-- Login Scene -->
    <string name="loginButtonNavegate">Navegar pelo NEXTE!</string>
    <string name="loginOrDescription">Entrar com e-mail ou telefone</string>
    <string name="loginButtonLogin">Entrar</string>
    <string name="loginPasswordDescription">Senha</string>
    <string name="loginEmailOrPhoneDescription">E-mail ou Telefone</string>
    <string name="loginLogoDescription">Logo of Nexte</string>
    <string name="loginBackgroundDescription">Background of Nexte</string>
...
