...
        android:text="@string/challengeVsX"
        android:textColor="@color/text_focus_regular"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"/>

    <EditText
        android:id="@+id/challengedResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/challengeSetPlaceholder"
        android:inputType="number"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/setCenterDivider"
        app:layout_constraintTop_toTopOf="@+id/setCenterDivider"
        android:background="@android:color/transparent"/>

    <EditText
        android:id="@+id/challengerResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/setCenterDivider"
        app:layout_constraintEnd_toEndOf="@id/setCenterDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setCenterDivider"
...
