...
        android:textColor="@color/text_description_thin"
        android:textSize="12sp"
        android:fontFamily="@font/roboto_light"
        android:textAllCaps="true" />

    <co.ceryle.radiorealbutton.RadioRealButtonGroup
        android:id="@+id/buttonGroup"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
            app:rrb_checked="false"
            app:rrb_text="3"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="16sp"/>

        <co.ceryle.radiorealbutton.RadioRealButton
            android:id="@+id/buttonFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:rrb_checked="false"
            app:rrb_text="5"
            app:rrb_textColor="@color/text_focus_regular"
            app:rrb_textSize="16sp"/>
...
